{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 1216,
  "lineage": "a9841539-72b8-8ea5-4669-290a637abd89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:loadbalancer/app/asdf-prod/7cefad6f27ec04cf",
            "arn_suffix": "app/asdf-prod/7cefad6f27ec04cf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "asdf-prod-175051901.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:loadbalancer/app/asdf-prod/7cefad6f27ec04cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "asdf-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d3e220ccb35c7dc5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-b2f24fc9"
              },
              {
                "subnet_id": "subnet-f185459a"
              }
            ],
            "subnets": [
              "subnet-b2f24fc9",
              "subnet-f185459a"
            ],
            "tags": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "tags_all": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "vpc_id": "vpc-d92bfcb2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.loadbalancer_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:listener/app/asdf-prod/7cefad6f27ec04cf/38ef501a4e5bc2c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:targetgroup/asdf-prod-blue/46c3ba57f7236351",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:listener/app/asdf-prod/7cefad6f27ec04cf/38ef501a4e5bc2c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:loadbalancer/app/asdf-prod/7cefad6f27ec04cf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer",
            "aws_lb_target_group.target_group_blue",
            "aws_security_group.loadbalancer_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_test_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:listener/app/asdf-prod/7cefad6f27ec04cf/d6d2abc4b9eeabe7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:targetgroup/asdf-prod-green/63befc35469e855e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:listener/app/asdf-prod/7cefad6f27ec04cf/d6d2abc4b9eeabe7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:loadbalancer/app/asdf-prod/7cefad6f27ec04cf",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer",
            "aws_lb_target_group.target_group_green",
            "aws_security_group.loadbalancer_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:listener/app/asdf-prod/7cefad6f27ec04cf/368ac6f43d02d3fb",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:210706881319:certificate/24902c1b-eb57-42c9-b531-3e722c2990ed",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:targetgroup/asdf-prod-blue/46c3ba57f7236351",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:listener/app/asdf-prod/7cefad6f27ec04cf/368ac6f43d02d3fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:loadbalancer/app/asdf-prod/7cefad6f27ec04cf",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer",
            "aws_lb_target_group.target_group_blue",
            "aws_security_group.loadbalancer_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:targetgroup/asdf-prod-blue/46c3ba57f7236351",
            "arn_suffix": "targetgroup/asdf-prod-blue/46c3ba57f7236351",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:targetgroup/asdf-prod-blue/46c3ba57f7236351",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "asdf-prod-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "tags_all": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-d92bfcb2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:targetgroup/asdf-prod-green/63befc35469e855e",
            "arn_suffix": "targetgroup/asdf-prod-green/63befc35469e855e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:210706881319:targetgroup/asdf-prod-green/63befc35469e855e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "asdf-prod-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "tags_all": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-d92bfcb2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:210706881319:security-group/sg-06cb17ebd940d275a",
            "description": "ecs service sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all TCP",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-06cb17ebd940d275a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asdf-prod-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "210706881319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "tags_all": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-d92bfcb2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:210706881319:security-group/sg-0d3e220ccb35c7dc5",
            "description": "loadbalancer sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3e220ccb35c7dc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "asdf-prod-lb-sg",
            "name_prefix": "",
            "owner_id": "210706881319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "tags_all": {
              "Application": "asdf",
              "Environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-d92bfcb2"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}